fixed the navbar styling to that it covers the whole top

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
 /* Container Styling */
 
 .navContainer {
-  position: fixed;
+  width: 100%;
+  height: 60px;
+  top: 0;
+  background-color: black;
+  color: white;
+  position: sticky;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
   height: 100vh;
+  top: 0;
 }
 
 .mainContainer {
